# SectorR

./: .replit  app.py  data_sources.py  market_cover.py  pyproject.toml  replit.md  requirements.txt  sector_rotation.py  tradingview_charts.py  trending_news.py  utils.py
.local/state/replit/agent/filesystem/: filesystem_state.json
.streamlit/: config.toml
repl_nix_workspace.egg-info/: PKG-INFO  requires.txt
