[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.5",
    "lxml>=5.4.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "streamlit>=1.48.1",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.65",
]
